# c64f3

./: .gitignore  README.md
proxy1541/: dev_settings_x64  run.sh
proxy1541/uno-proxy1541/: uno_proxy1541.ino
proxy1541/uno_proxy1541/: plot_protocol.py  uno_proxy1541.ino
proxy1541/vice-2.4.9/: .descr  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  vice-gtk.spec
proxy1541/vice-2.4.9/_mod/: Makefile  config.status  vice-mint-sdl.spec  vice-mint.spec  vice.spec
proxy1541/vice-2.4.9/_mod/data/: Makefile
proxy1541/vice-2.4.9/_mod/doc/: Makefile
proxy1541/vice-2.4.9/_mod/man/: Makefile
proxy1541/vice-2.4.9/_mod/po/: Makefile  Makefile.in  POTFILES  intl2po  vice.pot
proxy1541/vice-2.4.9/_mod/src/: Makefile  c1541  cartconv  config.h  petcat  translate.h  translate_text.c.po.c
proxy1541/vice-2.4.9/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
proxy1541/vice-2.4.9/data/: Makefile.in
proxy1541/vice-2.4.9/doc/: Makefile.in  vice.info
proxy1541/vice-2.4.9/man/: Makefile.in
proxy1541/vice-2.4.9/po/: cat-id-tbl.c  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  ko.gmo  nl.gmo  nl.po  pl.gmo  pl.po  ru.gmo  sv.gmo  sv.po  tr.gmo  vice.pot
proxy1541/vice-2.4.9/src/: Makefile.am  Makefile.in  OLD_Makefile.in  autostart-prg.h  autostart.c  c1541.c  config.h.in  iecbus.h  init.c  kbdbuf.c  machine-bus.h  machine.c  machine.h  main.c  p1541.c  serial.h  socket.c  sound.h  translate_text.c
proxy1541/vice-2.4.9/src/prox1541/: Makefile.am  prox1541.c
(+1397 files in other folders)
